moved ConsoleTable into different dll.

--- a/ConsoleTables/ConsoleTables.csproj
+++ b/ConsoleTables/ConsoleTables.csproj
@@ -47,6 +47,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ConsoleTables.Core\ConsoleTables.Core.csproj">
+      <Project>{40664D5F-AE78-4F8C-AA44-2A92A82294D7}</Project>
+      <Name>ConsoleTables.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
