--- a/ConsoleTables.nuspec
+++ b/ConsoleTables.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>ConsoleTables</id>
-        <version>1.1.0</version>
+        <version>1.1.1</version>
         <title>ConsoleTables</title>
         <authors>khalidabuhakmeh</authors>
         <owners>khalidabuhakmeh</owners>
@@ -10,7 +10,7 @@
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>Allows you to print out objects in a table view in a console application. Should be helpful for the diehard console fans.</description>
         <summary>Allows you to print out objects in a table view in a console application. Should be helpful for the diehard console fans.</summary>
-        <releaseNotes>Added Markdown tables</releaseNotes>
+        <releaseNotes>Fixed potential Mono bug</releaseNotes>
         <tags>console</tags>
     </metadata>
     <files>
