--- a/src/ConsoleTables.Core/project.json
+++ b/src/ConsoleTables.Core/project.json
@@ -3,9 +3,9 @@
   "frameworks": {
     "net40": { },
     "netstandard1.4": {
-      "imports": "dnxcore50",
       "dependencies": {
-        "NETStandard.Library": "1.5.0-rc2-24027"
+        "NETStandard.Library": "1.6.0",
+        "System.Reflection.TypeExtensions": "4.1.0" 
       }
     }
   }
