--- a/src/ConsoleTables/project.json
+++ b/src/ConsoleTables/project.json
@@ -5,17 +5,18 @@
   },
 
   "dependencies": {
-    "ConsoleTables.Core": "1.0.0-*",
-    "Microsoft.NETCore.App": {
-      "type": "platform",
-      "version": "1.0.0-rc2-3002702"
-    }
+    "ConsoleTables.Core": "1.0.0-*"
   },
 
   "frameworks": {
     "net40": { },
     "netcoreapp1.0": {
-      "imports": "dnxcore50"
+      "dependencies": {
+        "Microsoft.NETCore.App": {
+          "type": "platform",
+          "version": "1.0.0"
+        }
+      }
     }
   }
 }
