Update to csproj tooling.
This adds .NET Framework 4.5 support and netstandard1.3. Using `dotnet build` will build both.
The nuspec has been merged into the csproj.

--- a/src/ConsoleTables/ConsoleTables.csproj
+++ b/src/ConsoleTables/ConsoleTables.csproj
@@ -1,7 +1,13 @@
 ﻿<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" />
   <PropertyGroup>
-    <TargetFramework>netstandard1.3</TargetFramework>
+    <TargetFrameworks>netstandard1.2;net45</TargetFrameworks>
+    <PackageId>ConsoleTables</PackageId>
+    <PackageVersion>2.0.0-alpha1</PackageVersion>
+    <Description>Allows you to print out objects in a table view in a console application. Should be helpful for the diehard console fans.</Description>
+    <PackageProjectUrl>https://github.com/khalidabuhakmeh/ConsoleTables</PackageProjectUrl>
+    <PackageTags>console</PackageTags>
+    <Authors>khalidabuhakmeh</Authors>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="**\*.cs" />
@@ -18,10 +24,15 @@
       <Version>1.0.0-alpha-20161104-2</Version>
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard1.5'">
     <PackageReference Include="System.Reflection.TypeExtensions">
       <Version>4.3.0</Version>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup Condition="'$(TargetFramework)' == 'net45'">
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
