--- a/src/ConsoleTables/ConsoleTables.csproj
+++ b/src/ConsoleTables/ConsoleTables.csproj
@@ -1,9 +1,9 @@
-﻿<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" />
   <PropertyGroup>
     <TargetFrameworks>netstandard1.3;net40</TargetFrameworks>
     <PackageId>ConsoleTables</PackageId>
-    <PackageVersion>2.0.0-alpha1</PackageVersion>
+    <PackageVersion>2.0.0</PackageVersion>
     <Description>Allows you to print out objects in a table view in a console application. Should be helpful for the diehard console fans.</Description>
     <PackageProjectUrl>https://github.com/khalidabuhakmeh/ConsoleTables</PackageProjectUrl>
     <PackageTags>console</PackageTags>
