--- a/src/ConsoleTables/ConsoleTables.csproj
+++ b/src/ConsoleTables/ConsoleTables.csproj
@@ -2,13 +2,15 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard1.3;net40</TargetFrameworks>
     <PackageId>ConsoleTables</PackageId>
-    <PackageVersion>2.1.0</PackageVersion>
-    <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
-    <Version>$(PackageVersion)</Version>
+    <PackageVersion>2.2.0</PackageVersion>
+    <AssemblyVersion>2.2.0</AssemblyVersion>
+    <Version>2.2.0</Version>
     <Description>Allows you to print out objects in a table view in a console application. Should be helpful for the diehard console fans.</Description>
     <PackageProjectUrl>https://github.com/khalidabuhakmeh/ConsoleTables</PackageProjectUrl>
     <PackageTags>console</PackageTags>
     <Authors>khalidabuhakmeh</Authors>
+    <PackageReleaseNotes>Fix issue with column being too long</PackageReleaseNotes>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
   <ItemGroup Condition="'$(TargetFramework)' != 'net40'">
     <PackageReference Include="System.Reflection.TypeExtensions">
