--- a/src/ConsoleTables/ConsoleTables.csproj
+++ b/src/ConsoleTables/ConsoleTables.csproj
@@ -3,6 +3,8 @@
     <TargetFrameworks>netcoreapp3.1;netstandard1.3;net40</TargetFrameworks>
     <PackageId>ConsoleTables</PackageId>
     <NeutralLanguage>en-US</NeutralLanguage>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>sgKey.snk</AssemblyOriginatorKeyFile>
     <Description>Allows you to print out objects in a table view in a console application. Should be helpful for the diehard console fans.</Description>
     <PackageProjectUrl>https://github.com/khalidabuhakmeh/ConsoleTables</PackageProjectUrl>
     <PackageTags>consoletables,consoletable,console,table,output</PackageTags>
