--- a/src/ConsoleTables.Tests/ConsoleTables.Tests.csproj
+++ b/src/ConsoleTables.Tests/ConsoleTables.Tests.csproj
@@ -1,14 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-
+    <TargetFramework>net9.0</TargetFramework>
     <IsPackable>false</IsPackable>
-
     <ApplicationIcon />
-
     <OutputType>Library</OutputType>
-
     <StartupObject />
   </PropertyGroup>
 
@@ -22,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\ConsoleTables\ConsoleTables.csproj" />
+    <ProjectReference Include="..\ConsoleTables\ConsoleTables.csproj" />
   </ItemGroup>
 
 </Project>
